--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@material-ui/core": "^4.9.13",
     "@material-ui/styles": "^4.9.13",
     "@typescript-eslint/eslint-plugin": "^2.32.0",
     "@typescript-eslint/parser": "^2.32.0",
-    "eslint": "^7.0.0",
+    "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.19.0",
     "gatsby": "^2.21.22",
     "gatsby-image": "^2.4.3",
@@ -20,15 +21,15 @@
     "gatsby-plugin-typescript": "^2.4.2",
     "gatsby-source-filesystem": "^2.3.1",
     "gatsby-transformer-sharp": "^2.5.2",
-    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
-    "typescript": "^3.8.3"
+    "typeface-roboto": "0.0.75",
+    "typescript": "^3.7.3"
   },
   "devDependencies": {
     "eslint-config-airbnb-typescript-prettier": "^2.1.1",
-    "prettier": "2.0.5"
+    "prettier": "^1.18.2"
   },
   "keywords": [
     "gatsby"
